feat: implement blog system with MDX content and OG image support

--- a/src/content/blog/code-highlighting-demo.mdx
+++ b/src/content/blog/code-highlighting-demo.mdx
@@ -1,9 +1,14 @@
 ---
 title: '代碼高亮示範 - Prism React Renderer'
 description: '展示如何使用 prism-react-renderer 創建美麗的代碼區塊'
-date: '2025-05-25'
-author: 'Your Name'
-tags: ['javascript', 'react', 'syntax-highlighting']
+author: 'Ian Chou'
+publishDate: 2025-05-25
+tags: ['JavaScript', 'React', 'Syntax Highlighting']
+featured: true
+category: '教學'
+readingTime: 10
+coverImage: '/images/blog/code-highlighting-cover.webp'
+draft: false
 ---
 
 import { CodeBlock, AdvancedCodeBlock } from '../../components/MDXComponents';
