--- a/src/content/blog/modern-frontend-toolchain.mdx
+++ b/src/content/blog/modern-frontend-toolchain.mdx
@@ -1,3 +1,16 @@
+---
+title: '現代前端開發工具鏈'
+description: '探討現代前端開發中必備的工具鏈，包括建構工具、包管理器、開發環境配置等實用指南。'
+author: 'Ian Chou'
+publishDate: 2024-05-25
+tags: ['Vite', 'ESBuild', '工具鏈']
+featured: true
+category: '教學'
+readingTime: 8
+coverImage: '/images/blog/toolchain-cover.webp'
+draft: false
+---
+
 # 現代前端開發工具鏈
 
 在現代前端開發中，選擇合適的工具鏈對於專案的成功至關重要。本文將詳細介紹當前最流行的前端開發工具，幫助你建立高效的開發環境。
