--- a/src/content/blog/welcome.mdx
+++ b/src/content/blog/welcome.mdx
@@ -1,3 +1,16 @@
+---
+title: '歡迎來到我的博客'
+description: '這是我的第一篇博客文章，介紹這個博客的技術架構和我的寫作計劃。使用 Astro、React、TypeScript 和 Tailwind CSS 打造。'
+author: 'Ian Chou'
+publishDate: 2024-05-24
+tags: ['Astro', 'React', 'TypeScript']
+featured: true
+category: '技術'
+readingTime: 5
+coverImage: '/images/blog/welcome-cover.webp'
+draft: false
+---
+
 # 歡迎來到我的博客
 
 歡迎來到我的技術博客！這是我的第一篇文章，很高興能與大家分享我的技術經驗和見解。
